Theme/src/generic/sass/_cube.scss
/* ... */
/* table */

.bcdReportEven { @include con_color($cube-color-cell-even); }
.bcdReportOdd { @include con_color($cube-color-cell-odd); }

.bcdReport {
  .bcdExpandCollapseButton {
    cursor: pointer;
    padding: 3px;
    @include con_color($cube-color-dimension);
    line-height: 8px;
    border: 1px solid $border-color;
  }
  .bcdExpandContainer { display:flex; align-items: center;}
  .bcdExpandOriginal { width: 100%; }
 
 .bcdExpand:after { content: "\002B"; }
 .bcdCollapse:after { content: "\2212";}
 }

/* treeview specific*/

.bcdReport.bcdTreeReportPi {
  .bcdPlusSpan {
    margin-right: 13px;
  }
  .bcdExpandCollapseButton {
    padding: 0px  !important;
    width: 14px !important;
    display: inline-block;
  }
  .bcdIndent1 { padding-left: 24px !important; }
  .bcdIndent2 { padding-left: 43px !important; }
  .bcdIndent3 { padding-left: 62px !important; }
  .bcdIndent4 { padding-left: 81px !important; }
  .bcdIndent5 { padding-left: 100px !important; }
  .bcdIndent6 { padding-left: 119px !important; }
  .bcdIndent7 { padding-left: 138px !important; }
  .bcdIndent8 { padding-left: 157px !important; }
  .bcdIndent9 { padding-left: 176px !important; }
  .bcdIndent10 { padding-left: 195px !important; }
  .bcdIndent11 { padding-left: 214px !important; }
}

.bcdReport.bcdTreeReportPi,
.bcdReport.bcdTreeReport {
  
  border-spacing: 0px 6px;
  border-collapse: separate;
  border: none;
  min-width: 600px;

  thead th {
    background-color: inherit;
    color: inherit;
  }
  
  tr {
    height: 25px;
    vertical-align: middle;
  }
  
  .bcdCaption {
    text-align: left;
  }

  .bcdExpandCollapseButton {
    width: 6px;
    padding: 2px 0px 2px 5px;
  }

  .bcdButton {
    a {
      text-decoration: none;
      padding: 0px 4px 2px 4px;
      text-align: center;
      vertical-align: middle;
      margin: 0px;
      width: 6px;
      background-color: $tree-color-cell-border;
    }
  }
  
  .bcdLeaf.bcdReportParentOdd td,
  .bcdLeaf.bcdReportParentEven td {
    @include con_color($tree-color-cell-leaf);
    border-color: $tree-color-cell-leaf;
    border-top: 1px solid $tree-color-cell-border;
    border-bottom: 1px solid $tree-color-cell-border;
    border-right-style: none;
    border-left-style: none;
  }
  
  .bcdNoLeaf.bcdReportParentOdd td,
  .bcdNoLeaf.bcdReportParentOdd td,
  .bcdNoLeaf.bcdReportParentEven td,
  .bcdNoLeaf.bcdReportParentEven td {
    border-top: 1px solid $tree-color-cell-border;
    border-bottom: 1px solid $tree-color-cell-border;
    border-right-style: none;
    border-left-style: none;
  }
  .bcdLevel0.bcdNoLeaf td {
    @include con_color($tree-color-cell);
   }
  .bcdLevel1.bcdNoLeaf td {
    @include con_color($tree-color-cell_l1);
   }
  .bcdLevel2.bcdNoLeaf td {
    @include con_color($tree-color-cell_l2);
   }
  .bcdLevel3.bcdNoLeaf td {
    @include con_color($tree-color-cell_l3);
  }
}

.bcdExpand .bcdButton a:after { content: "\002B"; }
.bcdCollapse .bcdButton a:after { content: "\2212";}
/* ... */

